Service client should expect a URI instead of url string, reason being special characters should be encoded properly